# home-simstoser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-run.sh  config.example.json  package-lock.json  package.json  roadmap.md  run_tests.sh  test_config.json  test_config_10002.json  vcpkg.json
GUI/: Program.cs  S3StorageClient.csproj
GUI-WPF/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  S3HomeClient.csproj  S3HomeClient.slnx  S3StorageClient.csproj  app.config
GUI-WPF/Models/: ApiModels.cs
GUI-WPF/Properties/: Settings.cs
GUI-WPF/Services/: ApiService.cs  AuthService.cs
GUI-WPF/Views/: CreateKeyWindow.xaml  CreateKeyWindow.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  FilesPage.xaml  FilesPage.xaml.cs  KeysPage.xaml  KeysPage.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  MonitoringPage.xaml  MonitoringPage.xaml.cs  MultipartUploadWindow.xaml  MultipartUploadWindow.xaml.cs  PoliciesPage.xaml  PoliciesPage.xaml.cs  PolicyFormWindow.xaml  PolicyFormWindow.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  UserFormWindow.xaml  UserFormWindow.xaml.cs  UsersPage.xaml  UsersPage.xaml.cs
GUI/Forms/: DashboardControl.cs  FilesControl.cs  KeysControl.cs  LoginForm.cs  MainForm.cs  MonitoringControl.cs  MultipartUploadForm.cs  PoliciesControl.cs  SettingsControl.cs  UsersControl.cs
GUI/Services/: ApiService.cs
backend/include/: authenticator.hpp  authorization_header_parser.hpp  authorizer.hpp  cache.hpp  compression.hpp  config.hpp  file_manager.hpp  metrics.hpp  path_utils.hpp  rate_limiter.hpp  request_handler.hpp  server.hpp
backend/rest-api/: generate_openapi_clients_code.sh  index.html  openapi.yaml
backend/rest-api/keys-generation/: delete_file_example.sh  full_example.sh  keys.json
backend/src/: authenticator.cpp  authorization_header_parser.cpp  authorizer.cpp  compression.cpp  config.cpp  file_manager.cpp  main.cpp  path_utils.cpp  rate_limiter.cpp  request_handler.cpp  server.cpp
backend/tests/: CMakeLists.txt  access_keys.csv  authenticator_test.cpp  authorization_header_parser_test.cpp  authorizer_test.cpp  create_access_key_example.cpp  file_manager_test.cpp  request_handler_test.cpp  server_integration_test.cpp  test_http_client.hpp  users.json
configs/: access_keys.csv  acls.json  config.example.json  config.unprotected.json  test_config.json  test_config_10001.json  test_config_9997.json  test_config_9998.json  users.json
include/: authenticator.hpp  file_manager.hpp  logging.hpp  request_handler.hpp  server.hpp
rest-api/: redoc-index.html
rest-api/keys-generation/: download_file_example.sh  generate_keys.py  list_files_example.sh  load_file_example.sh  sign_request.py
src/: authorizer.cpp  file_manager.cpp  main.cpp  request_handler.cpp  server.cpp
test/: check_access_example.cpp  test.sh  test_access_key.py
tests/: CMakeLists.txt  server_integration_test.cpp  test_http_client.hpp
web/: app.js  client.js  https_client.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
web/src/: App.tsx
web/src/components/common/: Button.tsx  LoadingSpinner.tsx  Modal.tsx  Toast.tsx
web/src/components/files/: FileActions.tsx  FileList.tsx  FilePreview.tsx  FileUpload.tsx  MultipartUpload.tsx
web/src/components/keys/: AccessKeyForm.tsx  AccessKeyList.tsx
web/src/components/layout/: AuthGuard.tsx  Header.tsx  Sidebar.tsx
web/src/components/policies/: PolicyForm.tsx  PolicyList.tsx
web/src/components/users/: UserForm.tsx  UserList.tsx  UserRoleBadge.tsx
web/src/pages/: Dashboard.tsx  FilesPage.tsx  KeysPage.tsx  LoginPage.tsx  MonitoringPage.tsx  PoliciesPage.tsx  SettingsPage.tsx  UsersPage.tsx
web/src/services/: api.ts  auth.ts  files.ts  keys.ts  metrics.ts  multipart.ts  policies.ts  users.ts
web/src/types/: api.ts  index.ts
web/src/utils/: format.ts  storage.ts
